--- a/evolution_nb_artistes.html
+++ b/evolution_nb_artistes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>ADONA oeuvres</title>
+		<title>ADONA artistes</title>
 		<script type="text/javascript" src="http://d3js.org/d3.v5.min.js"></script>
 		<script src="https://d3js.org/d3-geo.v1.min.js"></script>
 		<script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
@@ -77,7 +77,7 @@
             });
             
             // adding ADONA sites
-            d3.json('data/evol_oeuvres_cumul.geojson').then(function (json) {
+            d3.json('data/evol_artistes_cumul.geojson').then(function (json) {
             	g3.selectAll('circle')
             	   .data(json.features)
             	   .enter()
@@ -85,13 +85,13 @@
             	   .attr('r', 0)
             	   .attr('cx',function(d) { return projection(d.geometry.coordinates)[0]})
             	   .attr('cy',function(d) { return projection(d.geometry.coordinates)[1]})
-            	   .attr('class', 'site_oeuvre')
+            	   .attr('class', 'site_artiste')
             	   // tooltips with site name and artwork number appear on mouseover
             	   .on('mouseover', function (d) {
             	       div.transition()
                             .duration(200)
                             .style("opacity", .9);
-        	       	   div.html(d.properties.nom_site + ' : <br>' + d.properties[d3.select(this).text()] + ' oeuvre(s)' )
+        	       	   div.html(d.properties.nom_site + ' : <br>' + d.properties[d3.select(this).text()] + ' artiste(s)' )
                            .style("left",  (d3.event.pageX) + "px")
                            .style("top", (d3.event.pageY - 28) + "px")
                        // circle changes color on mouseover
@@ -105,7 +105,7 @@
                            .style("opacity", 0)
                        // circle gets its original color back
                        d3.select(this)
-                           .style("fill", "orange");
+                           .style("fill", "#00c6bc");
                    });
             });
             
@@ -130,13 +130,13 @@
                    year = (sliderTime.value().getFullYear());
             	   g3.selectAll("circle")
             	       // set corresponding column name from json as text to retrieve it easily for tooltips
-            	       .text('oeuvres_' + (year-10) + '_' + (year-1))
-            	       // column name from point geojson looks like this : oeuvre_1910_1919
+            	       .text('artistes_' + (year-10) + '_' + (year-1))
+            	       // column name from point geojson looks like this : artistes_1910_1919
             	       .transition()
             	       .duration(500)
             	       .attr('r', function(d){
             	           if (year > 1910) {
-            	               colname = 'oeuvres_' + (year-10) + '_' + (year-1);
+            	               colname = 'artistes_' + (year-10) + '_' + (year-1);
             	               return calc_radius(d.properties[colname])
             	           } else {
             	               return 0	
@@ -187,7 +187,7 @@
                     //.attr("r", function() {console.log(zoom.scale()); return d3.select(this).attr("r")/zoom.scale()});
                     .attr("r", function(d) {
                         year = (sliderTime.value().getFullYear());
-                        colname = 'oeuvres_' + (year-10) + '_' + (year-1);
+                        colname = 'artistes_' + (year-10) + '_' + (year-1);
                         return calc_radius(d.properties[colname])/k
                     });
             }  
